--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Hello world!</h1>
+    <h2>Как дела?</h2>  
 </body>
 
 </html>
